# TV-head

./: .gitignore  CONTRIBUTING.md  JSON_FORMAT.md  LICENSE  README.md  README_old.md  conf.toml  controller.py  debug_images.py  diagram.json  main.py  menu.md  notes.md  pyproject.toml  requirements.txt  setup.py  test_tvhead.py  ui.py
.github/: FUNDING.yml
.github/workflows/: linting.yml  python-app.yml
dev/: converter.py  frame-splitter.py  image_comparator.py  image_converter.py  json_generator.py  padded_rename.py  sender.py
json/01-smile/: 01-smile.json
json/test_animation/: test_animation.json
media/: IMG_0134.MOV
onboard/ESP/C/: io.cpp  io.h  onboard.ino  render.cpp  render.h  settings.cfg
onboard/ESP/Python/: main.py
onboard/Pico/: MPU6050.py  config.py  led_debugger.py  main.py  rotary.py  rotaryirq.py  typing.py
onboard/Pico/rotary_encoder/: main.py
onboard/Pico/server/: server.py
onboard/Pico_New/: config.py  main.py  rotary.py  rotaryirq.py
tvhead/dev/: converter.py  main.py
tvhead/upload/: main.py
tvhead/utility/: clear_all.py  parsers.py  update_all.py  update_csvs.py
tvlib/: __init__.py  _boards.py  _config.py  _fileio.py  comparator.py  json_generator.py  padder.py  sprites.py  transformations.py
tvlib/utility/: clear_all.py  parsers.py  update_all.py  update_csvs.py  update_lib.py  view_files.py
upload/: clear.py  debugger.py  main.py  receiver.py  res.txt
upload/csvs/base/: base01.csv
upload/csvs/big_eye/: pixil-frame-0026.csv  pixil-frame-0027.csv  pixil-frame-0028.csv  pixil-frame-0029.csv  pixil-frame-0034.csv  pixil-frame-0035.csv  pixil-frame-0036.csv  pixil-frame-0059.csv
upload/csvs/blink/: blink03.csv  blink04.csv  blink05.csv  pixil-frame-0059.csv  pixil-frame-0066.csv  pixil-frame-0068.csv  pixil-frame-0070.csv  (+1 more)
upload/esp32/: debugger.py  main.py  oled_pin_debugger.py  receiver.py
upload/pico/: main.py  potential.py  sender.py
upload/render_esp/: main.py
upload/render_pico/: encoder.py  led_debugger.py  main.py  receiver.py
upload/rotary_pico/: lcd_debugger.py  main.py
upload/schmitt_pico/: lcd_debugger.py  main.py
utility/: clear_all.py  estimator.py  parsers.py  update_all.py  update_csvs.py  update_lib.py  view_files.py
(+118 files in other folders)
