[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tv-head"
version = "1.0.0"
description = "LED matrix display controller for TV Head cosplay"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Tadj Cazaubon", email = "tadj.d.cazaubon@gmail.com.com"}
]
keywords = ["led", "matrix", "cosplay", "opencv", "image-processing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "opencv-python>=4.5.0",
    "numpy>=1.19.0",
    "toml>=0.10.0",
]

[project.optional-dependencies]
sprites = ["pygame>=2.0.0"]
dev = [
    "pytest>=6.0.0",
    "black>=21.0.0", 
    "flake8>=3.8.0",
    "mypy>=0.800",
]
docs = ["Sphinx>=3.0.0"]

[project.scripts]
tvhead = "main:main"

[project.urls]
Homepage = "https://github.com/sudoDeVinci/TV-head"
Documentation = "https://github.com/sudoDeVinci/TV-head/wiki"
Repository = "https://github.com/sudoDeVinci/TV-head.git"
"Bug Tracker" = "https://github.com/sudoDeVinci/TV-head/issues"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
